--- a/index.html
+++ b/index.html
@@ -1,190 +1,333 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Information and Price in Dynamic Financial Markets</title>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Raleway:wght@300;400;600&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Raleway', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
-            color: #333;
-            text-align: center;
-        }
-        
-        header {
-            background: #2c3e50;
-            color: white;
-            padding: 20px 0;
-            font-size: 22px;
-            font-weight: bold;
-        }
+  <meta charset="UTF-8" />
+  <title>Information and Price in Dynamic Financial Markets</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Google Fonts -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Raleway:wght@300;400;600&display=swap"
+    rel="stylesheet"
+  />
+  <style>
+    /* ======== GLOBAL STYLES ======== */
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #f9f9f9;
+      font-family: "Raleway", sans-serif;
+      color: #333;
+    }
 
-        .container {
-            max-width: 900px;
-            margin: 40px auto;
-            padding: 20px;
-            background: white;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-        }
+    /* ======== HEADER ======== */
+    header {
+      background: #2c3e50;
+      color: #fff;
+      padding: 20px 0;
+      text-align: center;
+      font-size: 22px;
+      font-weight: bold;
+    }
 
-        h1 {
-            font-family: 'Libre Baskerville', serif;
-            font-size: 28px;
-            font-weight: bold;
-            color: #2c3e50;
-        }
+    /* ======== CONTAINER ======== */
+    .container {
+      max-width: 1000px;
+      margin: 40px auto;
+      background: #fff;
+      padding: 20px 40px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
+    }
 
-        p {
-            font-size: 18px;
-            line-height: 1.6;
-        }
+    /* ======== TITLE & TEXT ======== */
+    h1 {
+      font-family: "Libre Baskerville", serif;
+      font-size: 28px;
+      font-weight: bold;
+      margin-top: 0;
+      color: #2c3e50;
+      text-align: center;
+    }
 
-        .link-section {
-            text-align: left;
-            margin-top: 20px;
-        }
+    p {
+      font-size: 18px;
+      line-height: 1.6;
+    }
 
-        .link-section h2 {
-            font-size: 22px;
-            color: #2c3e50;
-            border-bottom: 2px solid #2c3e50;
-            padding-bottom: 5px;
-        }
+    /* Center any existing center tags gracefully */
+    center {
+      display: block;
+      text-align: center;
+    }
 
-        .code-links {
-            list-style: none;
-            padding: 0;
-        }
+    /* ======== LINKS & STYLES ======== */
+    a {
+      color: #2980b9;
+      text-decoration: none;
+      transition: color 0.3s;
+    }
+    a:hover {
+      color: #c0392b;
+    }
 
-        .code-links li {
-            padding: 8px 0;
-        }
+    /* Make .m file links a bit larger if they appear in <span style="font-size: large;"> */
+    span[style*="font-size: large;"] {
+      font-size: 20px !important;
+      font-weight: bold;
+    }
 
-        .code-links a {
-            text-decoration: none;
-            color: #2980b9;
-            font-weight: bold;
-            font-size: 18px;
-            transition: 0.3s;
-        }
+    /* For code sections if needed */
+    code, pre {
+      background: #f4f4f4;
+      padding: 4px 8px;
+      border-radius: 4px;
+      font-size: 16px;
+    }
 
-        .code-links a:hover {
-            color: #c0392b;
-        }
+    /* ======== FOOTER ======== */
+    footer {
+      text-align: center;
+      margin-top: 30px;
+      font-size: 14px;
+      color: #666;
+    }
 
-        footer {
-            margin-top: 30px;
-            font-size: 14px;
-            color: #666;
-        }
-
-        .btn {
-            display: inline-block;
-            background: #2980b9;
-            color: white;
-            padding: 10px 20px;
-            text-decoration: none;
-            font-size: 18px;
-            font-weight: bold;
-            border-radius: 5px;
-            margin-top: 10px;
-            transition: 0.3s;
-        }
-
-        .btn:hover {
-            background: #c0392b;
-        }
-
-    </style>
+  </style>
 </head>
-
 <body>
 
-    <header>
-        Information and Price in Dynamic Financial Markets
-    </header>
+  <header>
+    Information and Price in Dynamic Financial Markets
+  </header>
 
-    <div class="container">
-        <h1>Computer Codes for Equilibrium Strategies</h1>
-        <p>This set of MATLAB codes computes equilibrium strategies for the paper:  
-            <a href="https://www.sciencedirect.com/science/article/abs/pii/S016518892100021X" target="_blank">
-                "Price Manipulation, Dynamic Informed Trading, and the Uniqueness of Equilibrium in Sequential Trading"
-            </a> (Journal of Economic Dynamic and Control, 2021).
+  <div class="container">
+    <!-- Title -->
+    <h1>Computer Codes for Equilibrium Strategies</h1>
+
+    <!-- Original snippet content STARTS here -->
+    <!-- (All paragraphs and links preserved verbatim) -->
+
+    <p align="center">
+      <span style="font-size: x-large;">
+        Information and Pricein Dynamic Financial Markets
+      </span>
+    </p>
+
+    <p align="center">
+      <font size="4">
+        This is a set of computer codes that computes equilibrium strategies for
+        <a title="" href="https://www.sciencedirect.com/science/article/abs/pii/S016518892100021X">
+          Price manipulation, dynamic informed trading, and the uniqueness of equilibrium in sequential trading
+        </a> (Journal of Economic Dynamic and Control, 2021)
+      </font>
+    </p>
+
+    <div id="Codes">
+      <p>
+        <a title="" href="mainprog.m">
+          <span style="font-size: large;">mainprog.m</span>
+        </a>
+        This program solves the equilibrium.
+      </p>
+      <p>
+        <a title="" href="plotfig.m">
+          <span style="font-size: large;">plotfig.m</span>
+        </a>
+        This program produces pictures from the result (**.mat).
+      </p>
+      <p>
+        <a title="" href="savere.m">
+          <span style="font-size: large;">savere.m</span>
+        </a>
+        This program saves the simulation results.
+      </p>
+      <p>
+        <a title="" href="jactry.m">
+          <span style="font-size: large;">jactry.m</span>
+        </a>
+        This program is used to check the bug whenever any issue arises.
+      </p>
+
+      <div id="Functions">
+        <p>
+          <a title="" href="nextvalue.m">
+            <span style="font-size: large;">nextvalue.m</span>
+          </a>
+          nextvalue(x, int, b, m, f) computes the value of a function = m(int)*(x-b(int))+f(int)
+        </p>
+        <p>
+          <a title="" href="ask.m">
+            <span style="font-size: large;">ask.m</span>
+          </a>
+          ask(b, u, r, hb, ls) computes ask price via Bayes' rule.
+        </p>
+        <p>
+          <a title="" href="bid.m">
+            <span style="font-size: large;">bid.m</span>
+          </a>
+          bid(b, u, r, hb, ls) computes bid price via Bayes' rule.
+        </p>
+        <p>
+          <a title="" href="fd.m">
+            <span style="font-size: large;">fd.m</span>
+          </a>
+          fd(x0, x1, b, f) finds the interval [b(j), b(j+1)) to which the value f belongs to. The first j starts at x0 and continues up to x1.
+        </p>
+        <p>
+          <a title="" href="profits.m">
+            <span style="font-size: large;">profits.m</span>
+          </a>
+          [LB, LS, HB, HS] = profits(bi, as, b, I, N, vl, vh) returns profit for each strategy to both types given price and value functions.
+        </p>
+        <p>
+          <a title="" href="incentive.m">
+            <span style="font-size: large;">incentive.m</span>
+          </a>
+          incentive(u, r, I, N, b, mL, VL, mH, VH) returns [Regime, bi, as]. Regime = 1 if the honest strategy is incentive compatible and otherwise Regime = 0. bi is a bid price and as is an ask price if Regime = 1 and both take on 0 otherwise. It needs the following files: highbuy.m, highsell.m, lowbuy.m, and lowsell.m.
         </p>
 
-        <div class="link-section">
-            <h2>Main Programs</h2>
-            <ul class="code-links">
-                <li><a href="mainprog.m">mainprog.m</a> - This program solves the equilibrium.</li>
-                <li><a href="plotfig.m">plotfig.m</a> - Produces pictures from the result (**.mat**).</li>
-                <li><a href="savere.m">savere.m</a> - Saves the simulation results.</li>
-                <li><a href="jactry.m">jactry.m</a> - Used to check for bugs when issues arise.</li>
-            </ul>
-        </div>
-
-        <div class="link-section">
-            <h2>Functions</h2>
-            <ul class="code-links">
-                <li><a href="nextvalue.m">nextvalue.m</a> - Computes the function value: `m(int) * (x - b(int)) + f(int)`.</li>
-                <li><a href="ask.m">ask.m</a> - Computes ask price via Bayes' rule.</li>
-                <li><a href="bid.m">bid.m</a> - Computes bid price via Bayes' rule.</li>
-                <li><a href="fd.m">fd.m</a> - Finds the interval `[b(j), b(j+1))` to which value `f` belongs.</li>
-                <li><a href="profits.m">profits.m</a> - Computes profit for each strategy given price and value functions.</li>
-                <li><a href="incentive.m">incentive.m</a> - Checks if honest strategy is incentive-compatible.</li>
-            </ul>
-        </div>
-
-        <div class="link-section">
-            <h2>Trading & Strategy Functions</h2>
-            <ul class="code-links">
-                <li><a href="highbuy.m">highbuy.m</a> - Computes profit for High to buy.</li>
-                <li><a href="highsell.m">highsell.m</a> - Computes profit for High to sell.</li>
-                <li><a href="lowbuy.m">lowbuy.m</a> - Computes profit for Low to buy.</li>
-                <li><a href="lowsell.m">lowsell.m</a> - Computes profit for Low to sell.</li>
-            </ul>
-        </div>
-
-        <div class="link-section">
-            <h2>Equilibrium & Indifference Conditions</h2>
-            <ul class="code-links">
-                <li><a href="checkH.m">checkH.m</a> - Determines if type H manipulates.</li>
-                <li><a href="checkL.m">checkL.m</a> - Determines if type L manipulates.</li>
-                <li><a href="calaskH.m">calaskH.m</a> - Finds ask price for type H.</li>
-                <li><a href="calbidH.m">calbidH.m</a> - Computes bid price from calaskH.m.</li>
-                <li><a href="calaskL.m">calaskL.m</a> - Finds ask price for type L.</li>
-                <li><a href="calbidL.m">calbidL.m</a> - Computes bid price from calaskL.m.</li>
-            </ul>
-        </div>
-
-        <div class="link-section">
-            <h2>Mathematical Computation Functions</h2>
-            <ul class="code-links">
-                <li><a href="sol2real.m">sol2real.m</a> - Solves `ax² + bx + c = 0` for two solutions.</li>
-                <li><a href="diffun.m">diffun.m</a> - Computes profit differences between strategies.</li>
-                <li><a href="fixedHL.m">fixedHL.m</a> - Returns strategies for type H and L when both manipulate.</li>
-                <li><a href="myfunHL.m">myfunHL.m</a> - Computes approximated indifference conditions.</li>
-                <li><a href="newtonHL.m">newtonHL.m</a> - Uses Newton-Raphson method to find solutions.</li>
-                <li><a href="value1.m">value1.m</a> - Computes today's values for type L and H.</li>
-                <li><a href="valueL.m">valueL.m</a> - Returns today's value for type L given bid price.</li>
-                <li><a href="valueH.m">valueH.m</a> - Returns today's value for type H given ask price.</li>
-            </ul>
-        </div>
-
-        <a class="btn" href="http://www.shinotakayama.com">Visit Main Website</a>
-
-        <footer>
-            <p>For inquiries, email: <a href="mailto:s.takayama1@uq.edu.au">Shino Takayama</a></p>
-            <p>&copy; 2024 Shino Takayama. All Rights Reserved.</p>
-        </footer>
+        <p>
+          <a title="" href="highbuy.m">
+            <span style="font-size: large;">highbuy.m</span>
+          </a>
+          This computes profit for High to buy.
+        </p>
+        <p>
+          <a title="" href="highsell.m">
+            <span style="font-size: large;">highsell.m</span>
+          </a>
+          This computes profit for High to sell.
+        </p>
+        <p>
+          <a title="" href="lowbuy.m">
+            <span style="font-size: large;">lowbuy.m</span>
+          </a>
+          This computes profit for Low to buy.
+        </p>
+        <p>
+          <a title="" href="lowsell.m">
+            <span style="font-size: large;">lowsell.m</span>
+          </a>
+          This computes profit for Low to sell.
+        </p>
+        <p>
+          <a title="" href="checkH.m">
+            <span style="font-size: large;">checkH.m</span>
+          </a>
+          [Regime, bid, ask, stHB] = checkH(u, r, L, I, b, N, mL, VL, mH, VH) Regime = 1 if type H manipulates and otherwise Regime = 0. bi is a bid price and as is an ask price if Regime = 1 and both take on 0 otherwise. stHB returns the strategy that type H would take. It needs the following files: calaskH.m, calbidH.m, and (fd.m, lowbuy.m, lowsell.m).
+        </p>
+        <p>
+          <a title="" href="checkL.m">
+            <span style="font-size: large;">checkL.m</span>
+          </a>
+          [Regime, bid, ask, stLS] = checkL(u, r, H, I, b, N, mL, VL, mH, VH) Regime = 1 if type L manipulates and otherwise Regime = 0. bi is a bid price and as is an ask price if Regime = 1 and both take on 0 otherwise. stLS returns the strategy that type L would take. It needs the following files: calaskL.m, calbidL.m, and (fd.m, highbuy.m, highsell.m).
+        </p>
+        <p>
+          <a title="" href="calaskH.m">
+            <span style="font-size: large;">calaskH.m</span>
+          </a>
+          calaskH(I, L, N, b, mH, VH) finds ask price which satisfies the indifference condition for type H. It needs sol2real.m
+        </p>
+        <p>
+          <a title="" href="calbidH.m">
+            <span style="font-size: large;">calbidH.m</span>
+          </a>
+          From calaskH.m this computes bid price.
+        </p>
+        <p>
+          <a title="" href="calaskL.m">
+            <span style="font-size: large;">calaskL.m</span>
+          </a>
+          calaskL(I, L, N, b, mH, VH) finds ask price which satisfies the indifference condition for type L. It needs sol2real.m
+        </p>
+        <p>
+          <a title="" href="calbidL.m">
+            <span style="font-size: large;">calbidL.m</span>
+          </a>
+          From calaskL.m this computes bid price.
+        </p>
+        <p>
+          <a title="" href="sol2real.m">
+            <span style="font-size: large;">sol2real.m</span>
+          </a>
+          [xP, xM] = sol2real(a, b, c). sol2real.m returns two solutions xP and xM to solve ax^2 + b^x + c = 0. xP is the one with plus sign for square root for the quadratic solution and xM is the one with minus sign.
+        </p>
+        <p>
+          <a title="" href="diffun.m">
+            <span style="font-size: large;">diffun.m</span>
+          </a>
+          [xL, xH, LS, LB, HS, HB] = diffun(u, r, i, b, h, l, ml, mh, vl, vh) returns profit from each strategy (LS, LB, HS, HB) and xH and xL are the differences of profits between honest to manipulative strategies. It needs ask.m, bid.m and fd.m.
+        </p>
+        <p>
+          <a title="" href="fixedHL.m">
+            <span style="font-size: large;">fixedHL.m</span>
+          </a>
+          [newh, newl] = fixedHL(u, r, I, b, N, ml, vl, mh, vh,tol) returns strategies for type H and type L when both types manipulate. It needs diffun.m, fdminus.m, fdminus2.m, myfunHL.m, and jacHL.m
+        </p>
+        <p>
+          <a title="" href="myfunHL.m">
+            <span style="font-size: large;">myfunHL.m</span>
+          </a>
+          [fH, fL] = myfunHL(u, r, h, l, I, b, N, ml, vl, mh, vh) computes the values of two approximated indifference conditions. It needs ask.m, bid.m and fd.m.
+        </p>
+        <p>
+          <a title="" href="jacHL.m">
+            <span style="font-size: large;">jacHL.m</span>
+          </a>
+          jacHL(u, r, h, l, I, b, N, ml, vl, mh, vh) returns Jacobian matrix for Newton-Raphson method.
+        </p>
+        <p>
+          <a title="" href="value1.m">
+            <span style="font-size: large;">value1.m</span>
+          </a>
+          [VLn, VHn] = value1(I, as, bi, b, u, r, N, mL, VL, mH, VH) returns today's values for type L and type H. It needs fd.m, nextvalue.m, lowsell.m and highbuy.m.
+        </p>
+        <p>
+          <a title="" href="valueL.m">
+            <span style="font-size: large;">valueL.m</span>
+          </a>
+          valueL(bd, u, r, va, vb) returns today's value for type L given bd = bid price.
+        </p>
+        <p>
+          <a title="" href="valueH.m">
+            <span style="font-size: large;">valueH.m</span>
+          </a>
+          valueH(ak, u, r, va, vb) returns today's value for type H given ak = ask price.
+        </p>
+        <p>
+          <a title="" href="fdminus.m">
+            <span style="font-size: large;">fdminus.m</span>
+          </a>
+          fdminus(Kmat) returns finds possible x to make Kmat(k,j)= b(j) with x in [j-1, j) given k. Kmat does not need to be square.
+        </p>
+        <p>
+          <a title="" href="fdminus2.m">
+            <span style="font-size: large;">fdminus2.m</span>
+          </a>
+          fdminus2(Kmat) returns possible x to make Kmat(k,j)= j, Kmat(k,j-1)= j-1 with x in [j-1, j) given k. Kmat does not need to be square.
+        </p>
+        <p>
+          <a title="" href="newtonHL.m">
+            <span style="font-size: large;">newtonHL.m</span>
+          </a>
+          [oldh, oldl] = newtonHL(u, r, inih, inil, I, b, N, ml, vl, mh, vh, tol) returns the solution from the Newton-Raphson method. The maximum iteration is set at tol. oldh is a type-H's strategy and oldl is a type-L's strategy. This needs myfunHL.m and jacHL.m.
+        </p>
+      </div>
     </div>
 
+    <center>
+      <!-- You can add more content here if you wish -->
+    </center>
+
+    <!-- Original snippet content ENDS here -->
+
+    <footer>
+      <p>&copy; 2025 Shino Takayama</p>
+    </footer>
+  </div>
 </body>
 </html>
+
 
 
 
